タイトルのみの画面編集と使用画像の共有

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="main_text">test</string>
     <string name="this_is_sample">This is sample</string>
     <string name="button">Click</string>
+    <string name="tasukunyan">タスクにゃん</string>
 </resources>
